--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,11 @@ uuid = "49b73ce4-4ec7-45e5-a4ed-3fd2a973b9a8"
 authors = ["Julius Krumbiegel <julius.krumbiegel@gmail.com> and contributors"]
 version = "0.1.0"
 
+[deps]
+MacroTools = "1914dd2f-81c6-5fcd-8719-6d5c9610ff09"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+TestEnv = "1e6cf692-eddd-4d53-88a5-2d735e33781b"
+
 [compat]
 julia = "1"
 
