--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 TestEnv = "1e6cf692-eddd-4d53-88a5-2d735e33781b"
 
 [compat]
+MacroTools = "0.5"
 julia = "1"
 
 [extras]
